# statuspage

./: Cargo.toml  LICENSE
src/: client.rs  component.rs  error.rs  incident.rs  lib.rs  metainfo.rs  status.rs  summary.rs  utils.rs  webhook.rs
webhooks/: component1.json  component2.json  incident1.json  incident2.json  invalid.json
