[package]
name = "statuspage"
version = "0.3.3"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
serde_json = "1.0.120"
